Fix: Fix bug where the content showing the task overlaps a little with the bullet point
After fixing the previous issue with SelectToDelete for post it notes, the content for the task overlapped over the bullet point since the change in css code in SelectToDelete.css affected the way the task appeared. Updated SelectToDelete.jsx to contain dynamic class names so that the css styling would change based on the type of item SelectToDelete dealt with.

--- a/to_do_list/src/components/PostItNoteSection/SelectToDelete/SelectToDelete.css
+++ b/to_do_list/src/components/PostItNoteSection/SelectToDelete/SelectToDelete.css
@@ -1,8 +1,20 @@
 .select-to-delete-container {
+    
+}
+
+.select-to-delete-container--post-it-note {
     position: absolute;
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+.select-to-delete-container--task {
+
+}
+
+.select-to-delete {
+
 }
 
 
@@ -10,6 +22,7 @@
 .select-to-delete--post-it-note {
     width: 350px;
     height: 350px;
+    position: absolute;
     background-color: transparent;
     cursor: pointer;
 }
